# minifzf

./: .gitignore  pyproject.toml  readme.md
minifzf/: __init__.py  _key.py  _style.py  search.py  selector.py
minifzf/_cli/: __init__.py
