[tool.poetry]
name = "minifzf"
version = "0.1.0"
description = "Python Library and Command Line Tool for Fuzzy Selection."
authors = ["Harsh Verma <synacktra.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
rich = "13.7.0"
regex = "2023.12.25"
sshkeyboard = "2.3.1"
cyclopts = "2.1.2"

[tool.poetry.scripts]
mfzf = "minifzf._cli:app"
minifzf = "minifzf._cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
